--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,6 +8,7 @@
       "@src/*": ["src/*"]
     , "@test/*": ["__tests__/*"]
     , "@service/*": ["src/service/*"]
+    , "@adapter/*": ["src/adapter/*"]
     }
   }
 }
