--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "coverage": "jest --coverage --config jest.config.js",
     "dev": "ts-node src/index.ts",
-    "dev:debug": "node --inspect-brk node_modules/.bin/ts-node src/index.ts",
+    "dev:debug": "node --inspect-brk lib/index.js",
     "prepublishOnly": "yarn clean && yarn build",
     "clean": "rm -rf lib",
     "build": "tsc --project tsconfig.build.json && tscpaths -p tsconfig.build.json -s ./src -o ./lib",
@@ -18,19 +18,22 @@
   },
   "dependencies": {
     "fastify": "^3.3.0",
-    "ipfs-http-client": "^46.0.1",
+    "fastify-multipart": "^3.2.0",
+    "ipfs-http-client": "^46.1.0",
+    "iterable-operator": "^0.12.1",
+    "split-hash": "^0.1.1",
     "web-streams-polyfill": "^3.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.2",
     "@types/busboy": "^0.2.3",
-    "@types/jest": "^26.0.10",
-    "@types/node": "^14.6.2",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.6.4",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "cids": "^1.0.0",
-    "eslint": "^7.7.0",
+    "eslint": "^7.8.1",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
     "ts-jest": "^26.3.0",
