refactor: use dotenv for configuration

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "jest --config jest.config.js",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "coverage": "jest --coverage --config jest.config.js",
-    "dev": "ts-node --files -r tsconfig-paths/register src/index.ts",
-    "dev:debug": "node --inspect-brk --files -r tsconfig-paths/register src/index.ts",
+    "dev": "ts-node --files -r tsconfig-paths/register -r dotenv/config src/index.ts",
+    "dev:debug": "node --inspect-brk --files -r tsconfig-paths/register -r dotenv/config src/index.ts",
     "prepublishOnly": "yarn clean && yarn build",
     "clean": "rm -rf lib",
     "build": "tsc --project tsconfig.build.json && tscpaths -p tsconfig.build.json -s ./src -o ./lib",
@@ -32,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "cids": "^1.0.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.8.1",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
