--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "jest --config jest.config.js",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "coverage": "jest --coverage --config jest.config.js",
-    "dev": "ts-node --files -r tsconfig-paths/register -r dotenv/config src/index.ts",
-    "dev:debug": "node --inspect-brk --files -r tsconfig-paths/register -r dotenv/config src/index.ts",
+    "dev": "ts-node --files -r tsconfig-paths/register -r dotenv/config src/index.ts | pino-pretty",
+    "dev:debug": "node --inspect-brk --files -r tsconfig-paths/register -r dotenv/config src/index.ts | pino-pretty",
     "prepublishOnly": "yarn clean && yarn build",
     "clean": "rm -rf lib",
     "build": "tsc --project tsconfig.build.json && tscpaths -p tsconfig.build.json -s ./src -o ./lib",
@@ -36,6 +36,7 @@
     "eslint": "^7.8.1",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
+    "pino-pretty": "^4.2.0",
     "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
