--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest --config jest.config.js",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "coverage": "jest --coverage --config jest.config.js",
-    "dev": "ts-node --files -r tsconfig-paths/register -r dotenv/config src/index.ts | pino-pretty",
+    "dev": "nodemon",
     "dev:debug": "node --inspect-brk --files -r tsconfig-paths/register -r dotenv/config src/index.ts | pino-pretty",
     "prepublishOnly": "yarn clean && yarn build",
     "clean": "rm -rf lib",
@@ -36,6 +36,7 @@
     "eslint": "^7.8.1",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
+    "nodemon": "^2.0.4",
     "pino-pretty": "^4.2.1",
     "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
