--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/tmp": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
+    "cross-env": "^7.0.3",
     "cross-fetch": "^3.0.6",
     "eslint": "^7.17.0",
     "extra-fetch": "^0.1.6",
