--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@blackglory/jest-matchers": "^0.1.7",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/accepts": "^1.3.5",
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.1",
     "@types/busboy": "^0.2.3",
@@ -77,8 +78,10 @@
     "better-sqlite3": "^7.1.2",
     "common-tags": "^1.8.0",
     "dotenv": "^8.2.0",
+    "extra-generator": "^0.1.3",
     "extra-promise": "^0.13.15",
     "fastify": "^3.11.0",
+    "fastify-accepts": "^2.0.1",
     "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^5.2.0",
     "fastify-multipart": "^3.3.1",
