--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
     "@types/jest-json-schema": "^2.1.3",
     "@types/node": "^14.14.22",
     "@types/tmp": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "cross-env": "^7.0.3",
     "cross-fetch": "^3.0.6",
     "eslint": "^7.18.0",
-    "extra-fetch": "^0.1.9",
-    "extra-request": "^0.3.5",
-    "husky": "^4.3.8",
+    "extra-fetch": "^1.0.2",
+    "extra-request": "^1.0.2",
+    "husky": "4",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "jest-json-schema": "^5.0.0",
@@ -64,32 +64,32 @@
     "pino-pretty": "^4.3.0",
     "pm2": "^4.5.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.5"
   },
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.1",
-    "@blackglory/errors": "^0.1.4",
-    "@blackglory/types": "^0.2.9",
+    "@blackglory/errors": "^1.1.2",
+    "@blackglory/types": "^0.2.15",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.2",
     "common-tags": "^1.8.0",
     "dotenv": "^8.2.0",
     "extra-generator": "^0.1.3",
-    "extra-promise": "^0.13.15",
+    "extra-promise": "^0.14.3",
     "fastify": "^3.11.0",
     "fastify-accepts": "^2.0.1",
     "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^5.2.0",
-    "fastify-multipart": "^3.3.1",
+    "fastify-multipart": "^4.0.0",
     "fetch-blob": "^2.1.1",
     "fs-extra": "^9.1.0",
-    "iterable-operator": "^0.12.11",
+    "iterable-operator": "^0.13.2",
     "migrations-file": "^0.1.1",
-    "return-style": "^0.11.6",
+    "return-style": "^0.12.1",
     "split-hash": "^0.1.2",
     "tmp-promise": "^3.0.2",
     "value-getter": "^0.1.7"
