--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@typescript-eslint/parser": "^4.15.2",
     "cross-env": "^7.0.3",
     "cross-fetch": "^3.0.6",
+    "domexception": "^2.0.1",
     "eslint": "^7.21.0",
     "extra-fetch": "^1.0.2",
     "extra-request": "^1.1.1",
@@ -73,6 +74,7 @@
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.5",
     "@blackglory/errors": "^1.1.2",
+    "@blackglory/go": "^0.1.0",
     "@blackglory/types": "^0.2.23",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.2",
