--- a/package.json
+++ b/package.json
@@ -86,11 +86,13 @@
     "fastify-accepts": "^2.0.1",
     "fastify-bearer-auth": "^5.1.0",
     "fastify-cors": "^5.2.0",
+    "fastify-metrics": "^7.1.0",
     "fastify-multipart": "^4.0.0",
     "fetch-blob": "^2.1.1",
     "fs-extra": "^9.1.0",
     "iterable-operator": "^0.13.3",
     "migrations-file": "^0.1.4",
+    "prom-client": "^13.1.0",
     "return-style": "^0.12.2",
     "split-hash": "^0.1.2",
     "tmp-promise": "^3.0.2",
