--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node": ">=14"
   },
   "devDependencies": {
+    "@blackglory/http-status": "^1.0.0",
     "@blackglory/jest-matchers": "^0.1.12",
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
@@ -55,6 +56,7 @@
     "eslint": "^7.21.0",
     "extra-fetch": "^1.3.0",
     "extra-request": "^2.1.0",
+    "extra-response": "^0.3.3",
     "husky": "4",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
