--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "pino-pretty": "^4.7.1",
     "pm2": "^4.5.5",
     "rimraf": "^3.0.2",
+    "standard-version": "^9.1.1",
     "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
