--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
-    "test": "jest --no-cache --config jest.config.js",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "test:coverage": "jest --coverage --config jest.config.js",
+    "test": "jest --runInBand --no-cache --config jest.config.js",
+    "test:debug": "node --runInBand --inspect-brk node_modules/.bin/jest --runInBand",
+    "test:coverage": "jest --runInBand --coverage --config jest.config.js",
     "dev": "nodemon",
     "dev:http2": "cross-env REFILE_HTTP2=true nodemon",
     "clean": "rimraf lib",
@@ -35,64 +35,64 @@
   },
   "devDependencies": {
     "@blackglory/http-status": "^1.0.0",
-    "@blackglory/jest-matchers": "^0.1.14",
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
+    "@blackglory/jest-matchers": "^0.1.15",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@types/accepts": "^1.3.5",
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.1",
     "@types/busboy": "^0.2.3",
     "@types/common-tags": "^1.8.0",
-    "@types/fs-extra": "^9.0.9",
-    "@types/jest": "^26.0.22",
+    "@types/fs-extra": "^9.0.11",
+    "@types/jest": "^26.0.23",
     "@types/jest-json-schema": "^2.1.3",
-    "@types/node": "^14.14.37",
+    "@types/node": "^15.0.1",
     "@types/tmp": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "cross-env": "^7.0.3",
     "domexception": "^2.0.1",
-    "eslint": "^7.23.0",
-    "extra-fetch": "^1.5.0",
-    "extra-request": "^2.1.2",
+    "eslint": "^7.25.0",
+    "extra-fetch": "^1.7.1",
+    "extra-request": "^2.1.4",
     "extra-response": "^0.3.4",
     "husky": "4",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "jest-json-schema": "^5.0.0",
-    "memfs": "^3.2.0",
+    "memfs": "^3.2.2",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "pino-pretty": "^4.7.1",
-    "pm2": "^4.5.5",
+    "pm2": "^4.5.6",
     "rimraf": "^3.0.2",
-    "standard-version": "^9.1.1",
-    "ts-jest": "^26.5.4",
+    "standard-version": "^9.2.0",
+    "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.6",
     "@blackglory/errors": "^1.1.2",
     "@blackglory/go": "^0.1.0",
-    "@blackglory/types": "^0.4.1",
+    "@blackglory/types": "^0.4.2",
     "app-root-path": "^3.0.0",
-    "better-sqlite3": "^7.1.2",
+    "better-sqlite3": "^7.1.5",
     "common-tags": "^1.8.0",
     "dotenv": "^8.2.0",
     "extra-generator": "^0.2.1",
     "extra-promise": "^0.16.2",
-    "fastify": "^3.14.1",
+    "fastify": "^3.15.0",
     "fastify-accepts": "^2.0.1",
     "fastify-bearer-auth": "^5.1.0",
     "fastify-cors": "^5.2.0",
     "fastify-metrics": "^7.1.0",
-    "fastify-multipart": "^4.0.3",
-    "fetch-blob": "^2.1.1",
+    "fastify-multipart": "^4.0.5",
+    "fetch-blob": "2.1.1",
     "fs-extra": "^9.1.0",
-    "hotypes": "^0.1.4",
+    "hotypes": "^0.1.9",
     "iterable-operator": "^0.13.6",
     "justypes": "^0.1.1",
     "migrations-file": "^0.1.7",
