--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "@types/fs-extra": "^9.0.11",
     "@types/jest": "^26.0.23",
     "@types/jest-json-schema": "^2.1.3",
-    "@types/node": "^15.0.1",
+    "@types/node": "^15.0.2",
     "@types/tmp": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "cross-env": "^7.0.3",
     "domexception": "^2.0.1",
     "eslint": "^7.25.0",
@@ -66,8 +66,8 @@
     "pino-pretty": "^4.7.1",
     "pm2": "^4.5.6",
     "rimraf": "^3.0.2",
-    "standard-version": "^9.2.0",
-    "ts-jest": "^26.5.5",
+    "standard-version": "^9.3.0",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
@@ -79,20 +79,20 @@
     "@blackglory/go": "^0.1.0",
     "@blackglory/types": "^0.4.2",
     "app-root-path": "^3.0.0",
-    "better-sqlite3": "^7.1.5",
+    "better-sqlite3": "^7.3.1",
     "common-tags": "^1.8.0",
-    "dotenv": "^8.2.0",
-    "extra-generator": "^0.2.1",
-    "extra-promise": "^0.16.2",
-    "fastify": "^3.15.0",
+    "dotenv": "^9.0.0",
+    "extra-generator": "^0.2.4",
+    "extra-promise": "^0.16.4",
+    "fastify": "^3.15.1",
     "fastify-accepts": "^2.0.1",
     "fastify-bearer-auth": "^5.1.0",
-    "fastify-cors": "^5.2.0",
+    "fastify-cors": "^6.0.1",
     "fastify-metrics": "^7.1.0",
     "fastify-multipart": "^4.0.5",
-    "fetch-blob": "2.1.1",
-    "fs-extra": "^9.1.0",
-    "hotypes": "^0.1.9",
+    "fetch-blob": "3.0.0-rc.0",
+    "fs-extra": "^10.0.0",
+    "hotypes": "^0.2.0",
     "iterable-operator": "^0.13.6",
     "justypes": "^0.1.1",
     "migrations-file": "^0.1.7",
@@ -100,6 +100,6 @@
     "return-style": "^0.12.3",
     "split-hash": "^0.1.2",
     "tmp-promise": "^3.0.2",
-    "value-getter": "^0.1.13"
+    "value-getter": "^0.1.14"
   }
 }
