--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@blackglory/http-status": "^1.0.0",
-    "@blackglory/jest-matchers": "^0.1.15",
+    "@blackglory/jest-matchers": "^0.1.16",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "@types/accepts": "^1.3.5",
@@ -43,16 +43,14 @@
     "@types/better-sqlite3": "^5.4.1",
     "@types/busboy": "^0.2.3",
     "@types/common-tags": "^1.8.0",
-    "@types/fs-extra": "^9.0.11",
     "@types/jest": "^26.0.23",
     "@types/jest-json-schema": "^2.1.3",
-    "@types/node": "^15.0.2",
-    "@types/tmp": "^0.2.0",
+    "@types/node": "14",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "cross-env": "^7.0.3",
     "domexception": "^2.0.1",
-    "eslint": "^7.25.0",
+    "eslint": "^7.26.0",
     "extra-fetch": "^1.7.1",
     "extra-request": "^2.1.4",
     "extra-response": "^0.3.4",
@@ -60,7 +58,6 @@
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "jest-json-schema": "^5.0.0",
-    "memfs": "^3.2.2",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "pino-pretty": "^4.7.1",
@@ -82,6 +79,7 @@
     "better-sqlite3": "^7.3.1",
     "common-tags": "^1.8.0",
     "dotenv": "^9.0.0",
+    "extra-filesystem": "^0.2.20",
     "extra-generator": "^0.2.4",
     "extra-promise": "^0.16.4",
     "fastify": "^3.15.1",
@@ -90,8 +88,7 @@
     "fastify-cors": "^6.0.1",
     "fastify-metrics": "^7.1.0",
     "fastify-multipart": "^4.0.5",
-    "fetch-blob": "3.0.0-rc.0",
-    "fs-extra": "^10.0.0",
+    "fetch-blob": "2.1.1",
     "hotypes": "^0.2.0",
     "iterable-operator": "^0.13.6",
     "justypes": "^0.1.1",
@@ -99,7 +96,6 @@
     "prom-client": "^13.1.0",
     "return-style": "^0.12.3",
     "split-hash": "^0.1.2",
-    "tmp-promise": "^3.0.2",
     "value-getter": "^0.1.14"
   }
 }
