--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.2",
     "@types/busboy": "^0.2.3",
-    "@types/common-tags": "^1.8.0",
     "@types/jest": "^26.0.23",
     "@types/jest-json-schema": "^2.1.3",
     "@types/node": "14",
@@ -77,11 +76,11 @@
     "@blackglory/types": "^0.4.6",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.4.1",
-    "common-tags": "^1.8.0",
     "dotenv": "^10.0.0",
     "extra-filesystem": "^0.3.2",
     "extra-generator": "^0.2.6",
     "extra-promise": "^0.17.4",
+    "extra-tags": "^0.2.0",
     "fastify": "^3.18.1",
     "fastify-accepts": "^2.0.1",
     "fastify-bearer-auth": "^6.0.0",
