feat: replace REFILE_DATA with REFILE_DATABASE, REFILE_STORAGE
BREAKING CHANGE:
Replace REFILE_DATA with REFILE_DATABASE, REFILE_STORAGE

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -16,8 +16,10 @@ RUN apk add --update --no-cache --virtual .build-deps \
 COPY . ./
 
 RUN yarn build \
- && mkdir /data \
- && ln -s /data data
+ && mkdir /database \
+ && ln -s /database database \
+ && mkdir /storage \
+ && ln -s /storage storage
 
 ENV REFILE_HOST=0.0.0.0
 ENV REFILE_PORT=8080
