--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start": "node lib/index.js",
     "start:pm2": "pm2 start lib/index.js --name 'refile' --wait-ready",
     "start:http2": "cross-env REFILE_HTTP2=true node lib/index.js",
-    "docker:build": "docker build --tag store .",
+    "docker:build": "docker build --tag refile .",
     "docker:test": "docker-compose --file docker-compose.test.yml run --rm test",
     "release": "standard-version"
   },
@@ -35,8 +35,8 @@
   },
   "devDependencies": {
     "@blackglory/http-status": "^1.0.0",
-    "@blackglory/jest-matchers": "^0.1.20",
-    "@commitlint/cli": "^13.2.0",
+    "@blackglory/jest-matchers": "^0.1.21",
+    "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@types/accepts": "^1.3.5",
     "@types/app-root-path": "^1.2.4",
@@ -44,18 +44,18 @@
     "@types/busboy": "^0.2.4",
     "@types/jest": "^27.0.2",
     "@types/jest-json-schema": "^2.1.3",
-    "@types/node": "16.10.3",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@types/node": "16.10.9",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "cross-env": "^7.0.3",
     "domexception": "^2.0.1",
-    "eslint": "^7.32.0",
-    "extra-fetch": "^1.8.0",
+    "eslint": "^8.0.1",
+    "extra-fetch": "^1.8.1",
     "extra-request": "^3.0.1",
     "extra-response": "^0.3.7",
     "husky": "4",
-    "jest": "^27.2.4",
-    "jest-extended": "^0.11.5",
+    "jest": "^27.2.5",
+    "jest-extended": "^1.0.0",
     "jest-json-schema": "^5.0.0",
     "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
@@ -64,10 +64,10 @@
     "rimraf": "^3.0.2",
     "standard-version": "^9.3.1",
     "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
+    "ts-node": "^10.3.0",
     "tsconfig-paths": "^3.11.0",
     "tscpaths": "^0.0.9",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   },
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.7",
@@ -77,9 +77,9 @@
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.4.3",
     "dotenv": "^10.0.0",
-    "extra-filesystem": "^0.3.9",
+    "extra-filesystem": "^0.3.10",
     "extra-generator": "^0.2.11",
-    "extra-promise": "^0.18.7",
+    "extra-promise": "^0.19.0",
     "extra-tags": "^0.2.2",
     "fastify": "^3.22.0",
     "fastify-accepts": "^2.1.0",
@@ -89,8 +89,8 @@
     "fastify-multipart": "^5.0.2",
     "fetch-blob": "2.1.1",
     "iterable-operator": "^0.14.3",
-    "justypes": "^0.1.5",
-    "migrations-file": "^0.1.9",
+    "justypes": "^0.1.6",
+    "migrations-file": "^0.1.10",
     "prom-client": "^14.0.0",
     "return-style": "^0.12.3",
     "split-hash": "^0.1.2",
