--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@blackglory/http-status": "^1.0.1",
     "@blackglory/jest-matchers": "^0.2.1",
+    "@blackglory/log": "^0.1.0",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/accepts": "^1.3.5",
