--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   },
   "devDependencies": {
     "@blackglory/http-status": "^1.0.3",
-    "@blackglory/jest-matchers": "^0.5.0",
     "@blackglory/jest-resolver": "^0.3.0",
     "@blackglory/log": "^1.3.3",
     "@commitlint/cli": "^17.3.0",
@@ -43,10 +42,10 @@
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^7.6.3",
     "@types/jest": "^29.2.4",
-    "@types/jest-json-schema": "^6.1.1",
     "@types/node": "16",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
+    "ajv": "^8.11.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.29.0",
     "extra-fetch": "^4.0.1",
@@ -54,8 +53,6 @@
     "extra-response": "^0.4.0",
     "husky": "4",
     "jest": "^29.3.1",
-    "jest-extended": "^3.2.0",
-    "jest-json-schema": "^6.1.0",
     "jest-resolve": "^29.3.1",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
