--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "@types/better-sqlite3": "^7.6.3",
     "@types/jest": "^29.2.4",
     "@types/node": "16",
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "@typescript-eslint/parser": "^5.46.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
     "ajv": "^8.11.2",
     "cross-env": "^7.0.3",
-    "eslint": "^8.29.0",
+    "eslint": "^8.30.0",
     "extra-fetch": "^4.0.1",
     "extra-request": "^8.1.5",
     "extra-response": "^0.4.0",
@@ -61,18 +61,18 @@
     "standard-version": "^9.5.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "ts-patch": "^2.0.2",
+    "ts-patch": "^2.1.0",
     "tsconfig-paths": "^4.1.1",
     "typescript": "4.8",
     "typescript-transform-paths": "^3.4.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "yarn-deduplicate": "^6.0.0"
+    "yarn-deduplicate": "^6.0.1"
   },
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.16",
-    "@blackglory/errors": "^2.3.0",
-    "@blackglory/prelude": "^0.1.8",
+    "@blackglory/errors": "^2.4.1",
+    "@blackglory/prelude": "^0.2.0",
     "@fastify/accepts": "^4.1.0",
     "@fastify/bearer-auth": "^9.0.0",
     "@fastify/cors": "^8.2.0",
@@ -83,12 +83,12 @@
     "extra-generator": "^0.2.21",
     "extra-lazy": "^1.3.1",
     "extra-promise": "^4.4.0",
-    "extra-semver": "^0.1.0",
-    "extra-tags": "^0.2.6",
+    "extra-tags": "^0.3.0",
     "fastify": "^4.10.2",
     "iterable-operator": "^2.5.0",
     "migration-files": "^0.4.0",
     "return-style": "^1.0.0",
+    "semver": "^7.3.8",
     "split-hash": "^0.2.1",
     "value-getter": "^0.2.4",
     "you-died": "^0.4.2"
