--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "extra-fetch": "^4.0.4",
     "extra-request": "^8.1.6",
     "extra-response": "^0.5.1",
+    "hotypes": "^0.5.1",
     "husky": "4",
     "jest": "^29.4.1",
     "jest-resolve": "^29.4.1",
